--- a/java_steams.ipynb
+++ b/java_steams.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "id": "74e314a2-c4cc-4fe2-93bf-5400f5c24290",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "id": "87e40b6f-3179-4ccf-bf33-78298be5fc9a",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "id": "187002ac-c325-4184-9ed4-30a6a1d2cc64",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "id": "2fc87c65-83d8-4f0f-8a5a-77621f9ef8f9",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
        "[java, csharp]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "id": "8437ec2e-ffcf-4c5d-b202-f7f8eb7edd95",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "id": "107bc618-582c-49e1-8a5a-3d316e0a95d8",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "id": "ca8fbce4-7f7a-4151-9214-0633229eb57d",
    "metadata": {},
    "outputs": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "id": "01923e6c-74f6-494e-9d64-c76fa101cec1",
    "metadata": {},
    "outputs": [
@@ -135,7 +135,7 @@
        "4"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "id": "acd57a0c-b9b7-4a7b-8a25-7eb0ff1d44ae",
    "metadata": {},
    "outputs": [
@@ -164,7 +164,7 @@
        "true"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "id": "f0434064-69d4-4222-bc44-1e94c48d03c0",
    "metadata": {},
    "outputs": [
@@ -193,7 +193,7 @@
        "[python, csharp, php]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "id": "ff69a211-b565-47cc-af17-69374ebd7b2c",
    "metadata": {},
    "outputs": [
@@ -224,7 +224,7 @@
        "[PYTHON, JAVA, CSHARP, PHP]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "id": "2e4a00f8-2cc4-4f13-8095-e8862cbd10f2",
    "metadata": {},
    "outputs": [
@@ -261,7 +261,7 @@
        "true"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "id": "00b26480-7909-4e88-8356-f49bf2780421",
    "metadata": {},
    "outputs": [
@@ -282,7 +282,7 @@
        "false"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "id": "d8092bfe-5c58-4bbb-acbb-7defa88d2b3e",
    "metadata": {},
    "outputs": [
@@ -303,7 +303,7 @@
        "true"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "id": "8464703c-6d0c-4e60-9e5e-b5a4bb6f4a7f",
    "metadata": {},
    "outputs": [
@@ -332,7 +332,7 @@
        "true"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 16,
    "id": "6d2089ce-b869-4898-900a-1bb25421b40a",
    "metadata": {},
    "outputs": [
@@ -361,7 +361,7 @@
        "false"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 17,
    "id": "2b8f38c8-db4f-46a3-ae24-f669ab5fae7c",
    "metadata": {},
    "outputs": [],
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 18,
    "id": "39560ea1-9785-4e7a-903a-2f1499ab7b8a",
    "metadata": {},
    "outputs": [
@@ -401,7 +401,7 @@
        "26"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 19,
    "id": "9a4f5219-471a-4e9c-8588-28ed07c447dc",
    "metadata": {},
    "outputs": [
@@ -430,7 +430,7 @@
        "[PYTHON, CSHARP, PHP]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,17 +452,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 20,
    "id": "4f6c259a-8a4e-4fc7-aa29-351bccaa290b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "B6H5EFJFFQEF2ZHAAGN0"
+       "41CS3NZAJ5DKZHE7YQ7Z"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 21,
    "id": "c47b238d-8136-4368-8f58-5501dd06ba80",
    "metadata": {},
    "outputs": [
@@ -499,7 +499,7 @@
        "[1, 10, 100, 1000, 10000, 100000, 1000000, 10000000, 100000000, 1000000000]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 22,
    "id": "b0ea8240-19db-4236-9142-276f125410aa",
    "metadata": {},
    "outputs": [],
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 23,
    "id": "183504ad-0d08-4d98-8323-793e1696f622",
    "metadata": {},
    "outputs": [],
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 24,
    "id": "7fa5a5e0-3c81-418e-ac2c-cc6eab717998",
    "metadata": {},
    "outputs": [
@@ -591,9 +591,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.519319418610509\n",
-      "0.7359328362849669\n",
-      "0.8438079227461109\n"
+      "0.21644603714650434\n",
+      "0.6342425859163723\n",
+      "0.6483349351015105\n"
      ]
     }
    ],
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 25,
    "id": "c8cac1fb-d35c-4588-86c3-49ed965012ab",
    "metadata": {},
    "outputs": [],
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 26,
    "id": "4b8970a2-b8b5-46f1-bc87-a4df061bdfd4",
    "metadata": {},
    "outputs": [
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 27,
    "id": "5317048c-b225-487e-b332-b2c41722ba8b",
    "metadata": {},
    "outputs": [
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 28,
    "id": "a02a37f5-2dd3-49a5-be42-43bfef1158d8",
    "metadata": {},
    "outputs": [],
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 29,
    "id": "768ad14c-9b63-4d68-b265-88a246fca8ed",
    "metadata": {},
    "outputs": [
@@ -702,7 +702,7 @@
        "[by Ye Wen Zi]"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 30,
    "id": "134ed5d2-1605-4e1b-9ddb-a6d2c16822c7",
    "metadata": {},
    "outputs": [
@@ -731,7 +731,7 @@
        "[PYTHON, PHP]"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 31,
    "id": "9667dc23-6523-415b-ac2d-68cc94a97bf2",
    "metadata": {},
    "outputs": [
@@ -760,7 +760,7 @@
        "240"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 45,
    "id": "a662ab53-ed48-48d0-994e-e6951f3fc10b",
    "metadata": {},
    "outputs": [],
@@ -804,12 +804,18 @@
     "    }\n",
     "\n",
     "    // setter...\n",
+    "\n",
+    "    @Override\n",
+    "    public String toString() {\n",
+    "        return \"\"\"\n",
+    "            { \"name\": %s, \"price\": %d }\"\"\".formatted(name, price);\n",
+    "    }\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 46,
    "id": "82532385-18f3-440d-9301-9d89aed0c3a3",
    "metadata": {},
    "outputs": [
@@ -819,7 +825,7 @@
        "true"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -828,22 +834,23 @@
     "List<Product> products = new ArrayList<>();\n",
     "\n",
     "products.add(new Product(\"Book\", 10));\n",
-    "products.add(new Product(\"Pen\", 15));"
+    "products.add(new Product(\"Pen\", 15));\n",
+    "products.add(new Product(\"Ruler\", 15));"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 47,
    "id": "51971d24-fea2-4e71-a439-a6148dd34ed3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[Book, Pen]"
+       "[Book, Pen, Ruler]"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -854,17 +861,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 48,
    "id": "a8db36d9-e0d7-472f-a90d-3e64619f508c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{Book,Pen}"
+       "{Book,Pen,Ruler}"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -883,17 +890,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 49,
    "id": "353d7dad-e3df-4610-a8df-e26cc83326f1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "12.5"
+       "13.333333333333334"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -904,17 +911,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 50,
    "id": "6220c46c-841a-4623-89a7-47f4078d1f43",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "25"
+       "40"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -925,17 +932,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 51,
    "id": "c30ecf1f-cd45-41a2-8f73-fbb2219611a9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "IntSummaryStatistics{count=2, sum=25, min=10, average=12.500000, max=15}"
+       "IntSummaryStatistics{count=3, sum=40, min=10, average=13.333333, max=15}"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -946,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 52,
    "id": "f038eaaa-e467-4273-a50a-5a9e801afae7",
    "metadata": {},
    "outputs": [
@@ -954,7 +961,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pen"
+      "{ \"name\": Pen, \"price\": 15 }"
      ]
     }
    ],
@@ -964,28 +971,29 @@
     "// Optional<Product> maxPriceProduct = products.stream().max(Comparator.comparingInt(p -> p.getPrice()));\n",
     "Optional<Product> maxPriceProduct = products.stream().max(Comparator.comparingInt(Product::getPrice));\n",
     "\n",
-    "maxPriceProduct.ifPresent(p -> System.out.print(p.getName()));"
+    "// maxPriceProduct.ifPresent(p -> System.out.print(p.getName()));\n",
+    "maxPriceProduct.ifPresent(System.out::print);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 56,
    "id": "97e1e847-98f9-4580-b173-36be2b3998ec",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Pen"
+       "{ \"name\": Pen, \"price\": 15 }"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Collections.max(products, Comparator.comparingInt(Product::getPrice)).getName();"
+    "Collections.max(products, Comparator.comparingInt(Product::getPrice));"
    ]
   },
   {
@@ -1006,8 +1014,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "793af389-eb1c-4d74-ac46-8151ed6b0a4f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Map<Integer, List<Product>> productsPerPrice = products.stream().collect(Collectors.groupingBy(Product::getPrice))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "c67974f4-c482-42a8-bf06-a43bc592a1a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{ \"name\": Book, \"price\": 10 }]\n",
+      "[{ \"name\": Pen, \"price\": 15 }, { \"name\": Ruler, \"price\": 15 }]\n"
+     ]
+    }
+   ],
+   "source": [
+    "productsPerPrice.forEach((k, v) -> System.out.println(v))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "e78cbae3-c4cb-4958-a8d8-a19198a537a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "productsPerPrice.forEach((k, v) -> System.out.println(k))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb9d3573-cbf8-4452-aa26-bd68823b4283",
+   "metadata": {},
+   "source": [
+    "## Dividing stream’s elements into groups according to some predicate:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "d4ad3e76-5e0f-4c2e-9249-003b16d67f72",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Map<Boolean, List<Product>> mapPartioned = products.stream()\n",
+    "  .collect(Collectors.partitioningBy(element -> element.getPrice() > 12));"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "26bdfe9b-cbd5-46db-81b7-d5291d3b09c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "false\n",
+      "true\n"
+     ]
+    }
+   ],
+   "source": [
+    "mapPartioned.forEach((k, v) -> System.out.println(k))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "53ed490f-7e6d-4aa1-bc1d-47c8475d1c45",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{ \"name\": Book, \"price\": 10 }]\n",
+      "[{ \"name\": Pen, \"price\": 15 }, { \"name\": Ruler, \"price\": 15 }]\n"
+     ]
+    }
+   ],
+   "source": [
+    "mapPartioned.forEach((k, v) -> System.out.println(v))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64245da9-8745-4bf0-b32b-6e6d76c5d3ba",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aec0a2af-0110-488c-9997-84d2855571ea",
    "metadata": {},
    "outputs": [],
    "source": []
